--- a/day08_git_github.html
+++ b/day08_git_github.html
@@ -84,3 +84,14 @@
 </body>
 
 </html>
+    <script type="module">
+        import { auth } from './js/firebase-config.js';
+        import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+
+        onAuthStateChanged(auth, (user) => {
+            if (!user) {
+                alert("회원 전용 강의입니다. 로그인 후 이용해주세요.");
+                window.location.href = 'index.html';
+            }
+        });
+    </script>
