--- a/strategy_consultant.html
+++ b/strategy_consultant.html
@@ -453,7 +453,13 @@
                 <a href="#" class="hover:opacity-80 transition"><i class="fab fa-youtube text-2xl"></i></a>
                 <a href="#" class="hover:opacity-80 transition"><i class="fab fa-linkedin text-2xl"></i></a>
             </div>
-            <p class="text-sm opacity-60">© 2026 AI 비즈니스 컨설턴트. All rights reserved.</p>
+            
+            <div class="flex justify-center gap-6 mb-4 text-xs opacity-70">
+                <a href="terms.html" class="hover:underline">이용약관</a>
+                <span class="opacity-50">|</span>
+                <a href="privacy.html" class="hover:underline">개인정보처리방침</a>
+            </div>
+<p class="text-sm opacity-60">© 2026 AI 비즈니스 컨설턴트. All rights reserved.</p>
         </div>
     </footer>
 
