--- a/classroom_ethics.html
+++ b/classroom_ethics.html
@@ -49,7 +49,8 @@
                 </div>
             </div>
             <div class="flex items-center gap-4">
-                <span class="px-4 py-2 bg-indigo-50 text-indigo-600 rounded-lg text-sm font-bold flex items-center gap-2">
+                <span
+                    class="px-4 py-2 bg-indigo-50 text-indigo-600 rounded-lg text-sm font-bold flex items-center gap-2">
                     <i class="fas fa-search"></i>
                     <span class="hidden md:inline">검색</span>
                 </span>
@@ -80,7 +81,8 @@
         <section class="py-12 bg-gray-50" id="curriculum">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-12">
-                    <span class="text-indigo-600 font-bold text-sm uppercase tracking-wider bg-indigo-50 px-3 py-1 rounded-full">My
+                    <span
+                        class="text-indigo-600 font-bold text-sm uppercase tracking-wider bg-indigo-50 px-3 py-1 rounded-full">My
                         Curriculum</span>
                     <h2 class="text-3xl md:text-4xl font-bold mt-4 text-gray-800">
                         나의 AI 강의실
@@ -90,7 +92,8 @@
 
                 <div class="space-y-8 max-w-5xl mx-auto">
                     <!-- Module 1 -->
-                    <div class="day-card bg-white rounded-3xl shadow-xl overflow-hidden border border-gray-100 ring-4 ring-transparent hover:ring-indigo-50 transition-all">
+                    <div
+                        class="day-card bg-white rounded-3xl shadow-xl overflow-hidden border border-gray-100 ring-4 ring-transparent hover:ring-indigo-50 transition-all">
                         <div class="bg-gradient-to-r from-indigo-600 to-indigo-800 text-white px-8 py-6">
                             <div class="flex items-center justify-between flex-wrap gap-4">
                                 <div class="flex items-center gap-4">
@@ -101,7 +104,7 @@
                                     </div>
                                 </div>
                                 <div class="flex items-center gap-4 flex-wrap">
-                                    <a href="day01_lecture.html"
+                                    <a href="lecture_ethics_day01.html"
                                         class="px-6 py-2.5 bg-white text-indigo-700 rounded-full text-sm font-bold hover:bg-indigo-50 transition-all shadow-lg flex items-center gap-2 transform hover:-translate-y-0.5">
                                         <i class="fas fa-play"></i> 학습하기
                                     </a>
@@ -111,19 +114,23 @@
                         <div class="p-8">
                             <div class="bg-indigo-50 rounded-2xl p-6">
                                 <ul class="space-y-3 text-gray-700">
-                                    
+
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-indigo-600 mt-1"></i><span>생성형 AI의 저작권 이슈 사례</span></li>
+                                            class="fas fa-check-circle text-indigo-600 mt-1"></i><span>생성형 AI의 저작권 이슈
+                                            사례</span></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-indigo-600 mt-1"></i><span>기업 데이터 유출 사고 유형</span></li>
+                                            class="fas fa-check-circle text-indigo-600 mt-1"></i><span>기업 데이터 유출 사고
+                                            유형</span></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-indigo-600 mt-1"></i><span>개인정보보호법과 AI 컴플라이언스</span></li>
+                                            class="fas fa-check-circle text-indigo-600 mt-1"></i><span>개인정보보호법과 AI
+                                            컴플라이언스</span></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <!-- Module 2 -->
-                    <div class="day-card bg-white rounded-3xl shadow-xl overflow-hidden border border-gray-100 ring-4 ring-transparent hover:ring-emerald-50 transition-all">
+                    <div
+                        class="day-card bg-white rounded-3xl shadow-xl overflow-hidden border border-gray-100 ring-4 ring-transparent hover:ring-emerald-50 transition-all">
                         <div class="bg-gradient-to-r from-emerald-600 to-emerald-800 text-white px-8 py-6">
                             <div class="flex items-center justify-between flex-wrap gap-4">
                                 <div class="flex items-center gap-4">
@@ -134,7 +141,7 @@
                                     </div>
                                 </div>
                                 <div class="flex items-center gap-4 flex-wrap">
-                                    <a href="day01_lecture.html"
+                                    <a href="lecture_ethics_day02.html"
                                         class="px-6 py-2.5 bg-white text-emerald-700 rounded-full text-sm font-bold hover:bg-emerald-50 transition-all shadow-lg flex items-center gap-2 transform hover:-translate-y-0.5">
                                         <i class="fas fa-play"></i> 학습하기
                                     </a>
@@ -144,20 +151,23 @@
                         <div class="p-8">
                             <div class="bg-emerald-50 rounded-2xl p-6">
                                 <ul class="space-y-3 text-gray-700">
-                                    
+
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-emerald-600 mt-1"></i><span>프롬프트 입력 시 보안 주의사항</span></li>
+                                            class="fas fa-check-circle text-emerald-600 mt-1"></i><span>프롬프트 입력 시 보안
+                                            주의사항</span></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-emerald-600 mt-1"></i><span>AI 산출물의 사용 권한 및 책임</span></li>
+                                            class="fas fa-check-circle text-emerald-600 mt-1"></i><span>AI 산출물의 사용 권한 및
+                                            책임</span></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-emerald-600 mt-1"></i><span>사내 AI 윤리 강령 작성 실습</span></li>
+                                            class="fas fa-check-circle text-emerald-600 mt-1"></i><span>사내 AI 윤리 강령 작성
+                                            실습</span></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
     </main>
 
     <!-- Footer -->
