--- a/classroom_ethics.html
+++ b/classroom_ethics.html
@@ -99,12 +99,12 @@
                                 <div class="flex items-center gap-4">
                                     <span class="text-4xl font-black opacity-30">01</span>
                                     <div>
-                                        <h3 class="text-2xl font-bold">Day 1: AI 윤리와 규제 트렌드</h3>
+                                        <h3 class="text-2xl font-bold">Class 1: AI 윤리와 규제 트렌드</h3>
                                         <p class="opacity-80">국내외(EU AI Act) 법적 규제와 기업 리스크 분석</p>
                                     </div>
                                 </div>
                                 <div class="flex items-center gap-4 flex-wrap">
-                                    <a href="lecture_ethics_day01.html"
+                                    <a href="lecture_ethics_class1.html"
                                         class="px-6 py-2.5 bg-white text-indigo-700 rounded-full text-sm font-bold hover:bg-indigo-50 transition-all shadow-lg flex items-center gap-2 transform hover:-translate-y-0.5">
                                         <i class="fas fa-play"></i> 학습하기
                                     </a>
@@ -136,12 +136,12 @@
                                 <div class="flex items-center gap-4">
                                     <span class="text-4xl font-black opacity-30">02</span>
                                     <div>
-                                        <h3 class="text-2xl font-bold">Day 2: 실무 가이드라인 수립</h3>
+                                        <h3 class="text-2xl font-bold">Class 2: 실무 가이드라인 수립</h3>
                                         <p class="opacity-80">우리 회사에 맞는 AI 사용 정책 및 보안 수칙 제정</p>
                                     </div>
                                 </div>
                                 <div class="flex items-center gap-4 flex-wrap">
-                                    <a href="lecture_ethics_day02.html"
+                                    <a href="lecture_ethics_class2.html"
                                         class="px-6 py-2.5 bg-white text-emerald-700 rounded-full text-sm font-bold hover:bg-emerald-50 transition-all shadow-lg flex items-center gap-2 transform hover:-translate-y-0.5">
                                         <i class="fas fa-play"></i> 학습하기
                                     </a>
