--- a/classroom_basics.html
+++ b/classroom_basics.html
@@ -73,10 +73,10 @@
                     <div class="flex flex-col md:flex-row md:items-center justify-between gap-6 relative z-10">
                         <div>
                             <span class="text-indigo-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">01</span>
-                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Day 1: 생성형 AI 원리 이해</h2>
-                            <p class="text-indigo-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">LLM의 작동 방식과 프롬프트 엔지니어링 기초</p>
+                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 1: 생성형 AI 원리 이해 (오전)</h2>
+                            <p class="text-indigo-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">LLM의 작동 방식과 프롬프트 엔지니어링 기초 (4시간)</p>
                         </div>
-                        <a href="day01_lecture.html" class="bg-white text-indigo-700 px-6 py-2.5 rounded-full text-sm font-bold shadow-lg hover:shadow-xl hover:scale-105 active:scale-95 transition-all flex items-center gap-2 whitespace-nowrap self-start md:self-auto">
+                        <a href="lecture_basics_class1.html" class="bg-white text-indigo-700 px-6 py-2.5 rounded-full text-sm font-bold shadow-lg hover:shadow-xl hover:scale-105 active:scale-95 transition-all flex items-center gap-2 whitespace-nowrap self-start md:self-auto">
                             <i class="fas fa-play"></i> 학습하기
                         </a>
                     </div>
@@ -103,10 +103,10 @@
                     <div class="flex flex-col md:flex-row md:items-center justify-between gap-6 relative z-10">
                         <div>
                             <span class="text-emerald-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">02</span>
-                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Day 2: 업무 생산성 도구</h2>
-                            <p class="text-emerald-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">ChatGPT, Gemini, Claude 등 주요 툴 활용법</p>
+                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Class 2: 업무 생산성 도구 (오후)</h2>
+                            <p class="text-emerald-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">ChatGPT, Gemini, Claude 등 주요 툴 활용법 (4시간)</p>
                         </div>
-                        <a href="day01_lecture.html" class="bg-white text-emerald-700 px-6 py-2.5 rounded-full text-sm font-bold shadow-lg hover:shadow-xl hover:scale-105 active:scale-95 transition-all flex items-center gap-2 whitespace-nowrap self-start md:self-auto">
+                        <a href="lecture_basics_class2.html" class="bg-white text-emerald-700 px-6 py-2.5 rounded-full text-sm font-bold shadow-lg hover:shadow-xl hover:scale-105 active:scale-95 transition-all flex items-center gap-2 whitespace-nowrap self-start md:self-auto">
                             <i class="fas fa-play"></i> 학습하기
                         </a>
                     </div>
