--- a/classroom.html
+++ b/classroom.html
@@ -39,7 +39,7 @@
     <header class="bg-white border-b border-gray-200 sticky top-0 z-50">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center gap-3">
-                <a href="studio_main.html" class="mr-2 text-gray-400 hover:text-indigo-600 transition-colors"
+                <a href="index.html" class="mr-2 text-gray-400 hover:text-indigo-600 transition-colors"
                     title="메인으로 나가기">
                     <i class="fas fa-home text-xl"></i>
                 </a>
