--- a/classroom_leadership.html
+++ b/classroom_leadership.html
@@ -28,7 +28,7 @@
     <header class="bg-white/80 backdrop-blur-md border-b border-slate-100 sticky top-0 z-50">
         <nav class="max-w-7xl mx-auto px-6 h-16 flex items-center justify-between">
             <div class="flex items-center gap-3">
-                <a href="studio_main.html" class="text-slate-400 hover:text-indigo-600 transition-colors mr-2" title="메인으로 나가기">
+                <a href="index.html" class="text-slate-400 hover:text-indigo-600 transition-colors mr-2" title="메인으로 나가기">
                     <i class="fas fa-home text-xl"></i>
                 </a>
                 <div class="w-10 h-10 bg-indigo-600 rounded-xl flex items-center justify-center shadow-lg shadow-indigo-200">
