--- a/classroom_business.html
+++ b/classroom_business.html
@@ -73,10 +73,10 @@
                     <div class="flex flex-col md:flex-row md:items-center justify-between gap-6 relative z-10">
                         <div>
                             <span class="text-indigo-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">01</span>
-                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Day 1: AI 트렌드와 비즈니스 기회</h2>
-                            <p class="text-indigo-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">산업별 AI 도입 사례와 성공 전략</p>
+                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Day 1: AI 트렌드와 비즈니스 기회 (8시간)</h2>
+                            <p class="text-indigo-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">오전: 산업별 혁신 사례 / 오후: 신규 사업 모델 발굴</p>
                         </div>
-                        <a href="day01_lecture.html" class="bg-white text-indigo-700 px-6 py-2.5 rounded-full text-sm font-bold shadow-lg hover:shadow-xl hover:scale-105 active:scale-95 transition-all flex items-center gap-2 whitespace-nowrap self-start md:self-auto">
+                        <a href="lecture_business_day1.html" class="bg-white text-indigo-700 px-6 py-2.5 rounded-full text-sm font-bold shadow-lg hover:shadow-xl hover:scale-105 active:scale-95 transition-all flex items-center gap-2 whitespace-nowrap self-start md:self-auto">
                             <i class="fas fa-play"></i> 학습하기
                         </a>
                     </div>
@@ -86,11 +86,13 @@
                     <ul class="space-y-3 text-sm text-slate-600 font-medium">
                         
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-indigo-600 mt-1"></i><span>금융, 제조, 유통 분야 AI 혁신</span></li>
+                                            class="fas fa-check-circle text-indigo-600 mt-1"></i><span>(오전) 금융/제조/유통 분야 AI 도입 성공 사례 분석</span></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-indigo-600 mt-1"></i><span>생성형 AI 생태계 분석</span></li>
+                                            class="fas fa-check-circle text-indigo-600 mt-1"></i><span>(오전) 생성형 AI 생태계와 기술 트렌드</span></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-indigo-600 mt-1"></i><span>신규 비즈니스 모델 발굴</span></li>
+                                            class="fas fa-check-circle text-indigo-600 mt-1"></i><span>(오후) AI 기반 신규 비즈니스 모델 캔버스 작성</span></li>
+                                    <li class="flex items-start gap-2"><i
+                                            class="fas fa-check-circle text-indigo-600 mt-1"></i><span>(오후) 경쟁사 AI 전략 분석 및 차별화</span></li>
                     </ul>
                 </div>
             </div>
@@ -103,10 +105,10 @@
                     <div class="flex flex-col md:flex-row md:items-center justify-between gap-6 relative z-10">
                         <div>
                             <span class="text-emerald-200 font-bold text-5xl md:text-6xl opacity-20 absolute -left-4 -top-4 select-none">02</span>
-                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Day 2: AI 도입 로드맵 수립</h2>
-                            <p class="text-emerald-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">우리 조직에 맞는 AI 도입 전략 짜기</p>
+                            <h2 class="text-xl md:text-2xl font-bold mb-2 pl-2 md:pl-0 relative">Day 2: AI 도입 로드맵 수립 (8시간)</h2>
+                            <p class="text-emerald-100 text-sm md:text-base pl-2 md:pl-0 opacity-90">오전: 도입 전략 및 기획 / 오후: 구축 및 평가</p>
                         </div>
-                        <a href="day01_lecture.html" class="bg-white text-emerald-700 px-6 py-2.5 rounded-full text-sm font-bold shadow-lg hover:shadow-xl hover:scale-105 active:scale-95 transition-all flex items-center gap-2 whitespace-nowrap self-start md:self-auto">
+                        <a href="lecture_business_day2.html" class="bg-white text-emerald-700 px-6 py-2.5 rounded-full text-sm font-bold shadow-lg hover:shadow-xl hover:scale-105 active:scale-95 transition-all flex items-center gap-2 whitespace-nowrap self-start md:self-auto">
                             <i class="fas fa-play"></i> 학습하기
                         </a>
                     </div>
@@ -116,11 +118,13 @@
                     <ul class="space-y-3 text-sm text-slate-600 font-medium">
                         
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-emerald-600 mt-1"></i><span>AI 성숙도 진단 및 목표 설정</span></li>
+                                            class="fas fa-check-circle text-emerald-600 mt-1"></i><span>(오전) 우리 기업 AI 성숙도 진단 및 목표 설정</span></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-emerald-600 mt-1"></i><span>PoC(개념 증명) 기획 실습</span></li>
+                                            class="fas fa-check-circle text-emerald-600 mt-1"></i><span>(오전) PoC(개념 증명) 기획서 작성 실습</span></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-emerald-600 mt-1"></i><span>ROI 분석 및 투자 전략</span></li>
+                                            class="fas fa-check-circle text-emerald-600 mt-1"></i><span>(오후) ROI 분석 및 예산/인력 계획 수립</span></li>
+                                    <li class="flex items-start gap-2"><i
+                                            class="fas fa-check-circle text-emerald-600 mt-1"></i><span>(오후) AI 프로젝트 리스크 관리 및 거버넌스</span></li>
                     </ul>
                 </div>
             </div>
