--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@700;900&display=swap');
 
         body {
             font-family: 'Noto Sans KR', sans-serif;
         }
 
         .gradient-hero {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #f093fb 100%);
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/axis_bg.jpg');
+            background-size: cover;
+            background-position: center;
         }
 
         .gradient-card {
@@ -85,8 +88,9 @@
                 <i class="fas fa-graduation-cap mr-2"></i>Professional AI Education
             </span>
 
-            <h1 class="text-5xl md:text-7xl font-black mb-6 leading-tight">
-                비즈니스 AI<br>교육 스튜디오
+            <h1 class="text-6xl md:text-8xl font-black mb-6 leading-tight tracking-tighter"
+                style="font-family: 'Outfit', sans-serif;">
+                AXIS
             </h1>
 
             <p class="text-xl md:text-2xl opacity-90 max-w-3xl mx-auto mb-8 leading-relaxed">
@@ -180,7 +184,9 @@
                         </div>
                     </div>
 
-                    <a href="intro_ethics.html" class="block text-center w-full py-4 bg-blue-600 text-white rounded-xl font-bold hover:bg-blue-700 transition-colors shadow-lg shadow-blue-200">자세히 보기</a>
+                    <a href="intro_ethics.html"
+                        class="block text-center w-full py-4 bg-blue-600 text-white rounded-xl font-bold hover:bg-blue-700 transition-colors shadow-lg shadow-blue-200">자세히
+                        보기</a>
                 </div>
 
                 <!-- 초급 2: AI 기초 입문 -->
@@ -223,7 +229,9 @@
                         </div>
                     </div>
 
-                    <a href="intro_basics.html" class="block text-center w-full py-4 bg-blue-600 text-white rounded-xl font-bold hover:bg-blue-700 transition-colors shadow-lg shadow-blue-200">자세히 보기</a>
+                    <a href="intro_basics.html"
+                        class="block text-center w-full py-4 bg-blue-600 text-white rounded-xl font-bold hover:bg-blue-700 transition-colors shadow-lg shadow-blue-200">자세히
+                        보기</a>
                 </div>
 
                 <!-- 초급 3: AI 비즈니스 활용 -->
@@ -266,7 +274,9 @@
                         </div>
                     </div>
 
-                    <a href="intro_business.html" class="block text-center w-full py-4 bg-blue-600 text-white rounded-xl font-bold hover:bg-blue-700 transition-colors shadow-lg shadow-blue-200">자세히 보기</a>
+                    <a href="intro_business.html"
+                        class="block text-center w-full py-4 bg-blue-600 text-white rounded-xl font-bold hover:bg-blue-700 transition-colors shadow-lg shadow-blue-200">자세히
+                        보기</a>
                 </div>
 
                 <!-- 중급: AI 실무 마스터 -->
@@ -363,7 +373,9 @@
                         </div>
                     </div>
 
-                    <a href="expert_advanced.html" class="block text-center w-full py-4 bg-orange-600 text-white rounded-xl font-bold hover:bg-orange-700 transition-colors shadow-lg shadow-orange-200">자세히 보기</a>
+                    <a href="expert_advanced.html"
+                        class="block text-center w-full py-4 bg-orange-600 text-white rounded-xl font-bold hover:bg-orange-700 transition-colors shadow-lg shadow-orange-200">자세히
+                        보기</a>
                 </div>
 
                 <!-- 특화 1: AI 마케팅 전문가 -->
@@ -406,7 +418,9 @@
                         </div>
                     </div>
 
-                    <a href="special_marketing.html" class="block text-center w-full py-4 bg-pink-600 text-white rounded-xl font-bold hover:bg-pink-700 transition-colors shadow-lg shadow-pink-200">자세히 보기</a>
+                    <a href="special_marketing.html"
+                        class="block text-center w-full py-4 bg-pink-600 text-white rounded-xl font-bold hover:bg-pink-700 transition-colors shadow-lg shadow-pink-200">자세히
+                        보기</a>
                 </div>
 
                 <!-- 특화 2: AI 제조 전문가 -->
@@ -449,7 +463,9 @@
                         </div>
                     </div>
 
-                    <a href="special_manufacturing.html" class="block text-center w-full py-4 bg-gray-600 text-white rounded-xl font-bold hover:bg-gray-700 transition-colors shadow-lg shadow-gray-200">자세히 보기</a>
+                    <a href="special_manufacturing.html"
+                        class="block text-center w-full py-4 bg-gray-600 text-white rounded-xl font-bold hover:bg-gray-700 transition-colors shadow-lg shadow-gray-200">자세히
+                        보기</a>
                 </div>
 
                 <!-- 특화 3: AI 데이터 분석가 -->
@@ -492,7 +508,9 @@
                         </div>
                     </div>
 
-                    <a href="special_data.html" class="block text-center w-full py-4 bg-cyan-600 text-white rounded-xl font-bold hover:bg-cyan-700 transition-colors shadow-lg shadow-cyan-200">자세히 보기</a>
+                    <a href="special_data.html"
+                        class="block text-center w-full py-4 bg-cyan-600 text-white rounded-xl font-bold hover:bg-cyan-700 transition-colors shadow-lg shadow-cyan-200">자세히
+                        보기</a>
                 </div>
 
                 <!-- 특화 4: AI 영상 크리에이터 -->
@@ -535,7 +553,9 @@
                         </div>
                     </div>
 
-                    <a href="special_video.html" class="block text-center w-full py-4 bg-red-600 text-white rounded-xl font-bold hover:bg-red-700 transition-colors shadow-lg shadow-red-200">자세히 보기</a>
+                    <a href="special_video.html"
+                        class="block text-center w-full py-4 bg-red-600 text-white rounded-xl font-bold hover:bg-red-700 transition-colors shadow-lg shadow-red-200">자세히
+                        보기</a>
                 </div>
 
                 <!-- 관리: AI 보안 및 윤리 -->
@@ -579,7 +599,9 @@
                         </div>
                     </div>
 
-                    <a href="management_leadership.html" class="block text-center w-full py-4 bg-yellow-600 text-white rounded-xl font-bold hover:bg-yellow-700 transition-colors shadow-lg shadow-yellow-200">자세히 보기</a>
+                    <a href="management_leadership.html"
+                        class="block text-center w-full py-4 bg-yellow-600 text-white rounded-xl font-bold hover:bg-yellow-700 transition-colors shadow-lg shadow-yellow-200">자세히
+                        보기</a>
                 </div>
 
                 <!-- 전략: AI 비즈니스 컨설턴트 -->
@@ -623,7 +645,9 @@
                         </div>
                     </div>
 
-                    <a href="strategy_consultant.html" class="block text-center w-full py-4 bg-emerald-600 text-white rounded-xl font-bold hover:bg-emerald-700 transition-colors shadow-lg shadow-emerald-200">자세히 보기</a>
+                    <a href="strategy_consultant.html"
+                        class="block text-center w-full py-4 bg-emerald-600 text-white rounded-xl font-bold hover:bg-emerald-700 transition-colors shadow-lg shadow-emerald-200">자세히
+                        보기</a>
                 </div>
 
                 <!-- 마스터: 비즈니스 앱 크리에이터 -->
@@ -667,7 +691,9 @@
                         </div>
                     </div>
 
-                    <a href="master_app_creator.html" class="block text-center w-full py-4 bg-indigo-600 text-white rounded-xl font-bold hover:bg-indigo-700 transition-colors shadow-lg shadow-indigo-200">자세히 보기</a>
+                    <a href="master_app_creator.html"
+                        class="block text-center w-full py-4 bg-indigo-600 text-white rounded-xl font-bold hover:bg-indigo-700 transition-colors shadow-lg shadow-indigo-200">자세히
+                        보기</a>
                 </div>
             </div>
         </div>
