--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
 
         .gradient-hero {
-            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/axis_bg.jpg');
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('images/axis_app_bg.jpg');
             background-size: cover;
             background-position: center;
         }
